[package]
name = "HamaFabric"
version = "0.1.0"
authors = ["hama"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
crossbeam = "0.7.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
